--- a/paper/pnas-sample.bib
+++ b/paper/pnas-sample.bib
@@ -98,3 +98,11 @@
   year={2022},
   note={Accessed 12/8/2022}
 }
+
+@misc{networkxcommunities,
+  author={NetworkX},
+  howpublished={\url{https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.community.modularity_max.greedy_modularity_communities.html}},
+  title={Greedy Modularity Communities},
+  year={2022},
+  note={Accessed 12/9/2022}
+}
