updated to most recent pdf

--- a/paper/PNAS-template-main.tex
+++ b/paper/PNAS-template-main.tex
@@ -175,7 +175,7 @@ where \textit{m} is the number of edges in the network and \textit{n} is the num
 \begin{figure}
 \centering
 \includegraphics[width=.8\linewidth]{community_table}
-\caption{The first column provides general statistics about the communities. The second column gives the node statistics about the communities. The second column gives the edges statistics about the communities. The communities were derived using the Clauset-Newman-Moore Greedy Modularity Maximization algorithm \cite{networkxcommunities}.
+\caption{The red column provides general statistics about the communities. The yellow column gives the node statistics about the communities. The green column gives the edges statistics about the communities. The communities were derived using the Clauset-Newman-Moore Greedy Modularity Maximization algorithm \cite{networkxcommunities}.
 }
 \label{fig:community_table}
 \end{figure}
